--- a/week1/pages/layout1.html
+++ b/week1/pages/layout1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <link rel="stylesheet" href="/week1/src/layout.css" />
+  <link rel="stylesheet" href="/week1/src/layout1.css" />
   <body>
     <div class="backpage">
       <div class="center">
